# hato-age-bot

./: .dockerignore  Dockerfile  Pipfile  README.md  README.template.md  build.docker-compose.yml  create_env.py  dev.docker-compose.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  wait_db.py
.github/workflows/: add-to-task-list.yml  deploy-hato-bot.yml  format-json-yml.yml  github-actions-cache-cleaner.yml  pr-copy-ci-hato-bot.yml  pr-format.yml  pr-install-sudden-death-hato-bot.yml  pr-merge-develop-hato-bot.yml  pr-release-hato-bot.yml  pr-test-hato-bot.yml  pr-test.yml  pr-update-gitleaks.yml  update-readme-hato-bot.yml
plugins/: hato.py
postgres/: Dockerfile
scripts/: uv_install.sh
scripts/deploy_hato_bot/pr_update_version/: get_npm_version.sh
scripts/deploy_hato_bot/update_version_python_version/: get_python_version.sh
scripts/pr_format/pr_format/: fix_pyproject.py  format.sh
scripts/pr_install_sudden_death_hato_bot/pr_install_sudden_death_hato_bot/: install_sudden_death.sh
scripts/pr_test/pr_super_lint/: get_python_version.py  npm_ci.sh  set_venv_path.sh
scripts/pr_test_hato_bot/pr_test/: test.sh
